--- a/packages/vtb-shared/package.json
+++ b/packages/vtb-shared/package.json
@@ -64,6 +64,7 @@
     "@types/react-dom": "^18.0.11",
     "dotenv": "^16.0.3",
     "process": "^0.11.10",
+    "rollup": "^4.24.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
