--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,12 @@
 # *build*
-*node_modules*
-*dist*
 # **/build/
-**/dist/
-**/node_modules/
 # build/
-dist/
+*node_modules*
+**/node_modules/
 node_modules/
+*dist*
+**/dist/
+dist/
+*.tubo*
+**/.tubo/
+.tubo/
