--- a/packages/vtb-shared/package.json
+++ b/packages/vtb-shared/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vtb-shared",
   "version": "0.1.0",
+  "type": "module",
   "files": [
     "./dist"
   ],
@@ -57,11 +58,13 @@
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-replace": "^6.0.1",
     "@rollup/plugin-typescript": "^12.1.0",
     "@svgr/rollup": "^8.1.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.0.3",
     "process": "^0.11.10",
     "rollup": "^4.24.0",
