--- a/apps/login/package.json
+++ b/apps/login/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "mini-css-extract-plugin": "^2.9.1",
     "postcss-loader": "^8.1.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
