--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@metamask/sdk-react-ui": "^0.29.2",
+    "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
+    "@react-input/mask": "^1.2.11",
     "axios": "^1.3.4",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
     "react-router": "^6.9.0",
     "react-router-dom": "6",
@@ -57,6 +61,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "mini-css-extract-plugin": "^2.9.1",
     "postcss-loader": "^8.1.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
