--- a/packages/config-utils/package.json
+++ b/packages/config-utils/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
     "http-proxy-middleware": "^2.0.6",
+    "mini-css-extract-plugin": "^2.9.1",
     "react-app-rewire-alias": "^1.1.7",
     "react-dev-utils": "^12.0.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
