--- a/apps/employer/package.json
+++ b/apps/employer/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/react": "^5.0.2",
     "@metamask/sdk-react-ui": "^0.29.2",
     "@radix-ui/react-form": "^0.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
     "@react-input/mask": "^1.2.11",
     "axios": "^1.3.4",
+    "clsx": "^2.1.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
